apps/shiplog/tests/render_md/snapshots/render_md__snapshot__snapshot_mixed_event_types.snap
---
source: apps/shiplog/tests/render_md/snapshot.rs
expression: result
---
# Summary

**Window:** 2025-Q1

**Workstreams:** 1

**Events:** 1 PR, 1 review, 1 manual event

**Coverage:** Complete

**Sources:** GitHub

## Executive Summary

- **Mixed Work** — 1 PR, 1 review, 1 manual event

## Workstreams

### Mixed Work

Cross-cutting work

**Evidence anchors**

- [PR] Implement feature X (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/42)
- [Review] approved (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/42)
- [🚨] Production outage resolution (1970-01-01)

**Suggested claim prompts**

- What changed for users, operators, or maintainers?
- Which risk, delay, or repeated work did this reduce?
- Which evidence anchor best proves the change?
- What follow-up or gap should a reviewer know about?

_PRs: 1, Reviews: 1, Manual: 1_

## Receipts

### Workstream: Mixed Work

- [PR] Implement feature X (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/42)
- [Review] approved (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/42)
- [🚨] Production outage resolution (1970-01-01)

## Coverage and Limits

Included:
- GitHub: 2 events
- Manual: 1 event
- Fetched events: not reported by query slices

Skipped:
- None recorded

Known gaps:
- Manual events are user-provided

Details:
- **Date window:** 2025-01-01 to 2025-04-01
- **Mode:** merged
- **Sources:** GitHub
- **Completeness:** Complete

## Appendix: All Receipts

### Mixed Work

- [PR] Implement feature X (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/42)
- [Review] approved (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/42)
- [🚨] Production outage resolution (1970-01-01)

---

## File Artifacts

- `packet.md` (this review packet)
- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.suggested.yaml` (auto-generated workstream suggestions)
- `workstreams.yaml` (curated workstreams, created after edits)
- `bundle.manifest.json` (artifact manifest and checksums)
