apps/shiplog/tests/render_md/snapshots/render_md__snapshot__snapshot_receipt_truncation.snap
---
source: apps/shiplog/tests/render_md/snapshot.rs
expression: result
---
# Summary

**Window:** 2025-Q1

**Workstreams:** 1

**Events:** 8 PRs, 0 reviews, 0 manual events

**Coverage:** Complete

**Sources:** GitHub

## Executive Summary

- **Big Workstream** — 8 PRs, 0 reviews, 0 manual events

## Workstreams

### Big Workstream

Lots of receipts

**Evidence anchors**

- [PR] PR #1 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/1)
- [PR] PR #2 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/2)
- [PR] PR #3 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/3)
- ... and 5 more in [Receipts](#receipts)

**Suggested claim prompts**

- What changed for users, operators, or maintainers?
- Which risk, delay, or repeated work did this reduce?
- Which evidence anchor best proves the change?
- What follow-up or gap should a reviewer know about?

_PRs: 8, Reviews: 0, Manual: 0_

## Receipts

### Workstream: Big Workstream

- [PR] PR #1 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/1)
- [PR] PR #2 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/2)
- [PR] PR #3 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/3)
- [PR] PR #4 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/4)
- [PR] PR #5 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/5)
- *... and 3 more in [Appendix](#appendix-receipts)*

## Coverage and Limits

Included:
- GitHub: 8 events
- Fetched events: not reported by query slices

Skipped:
- None recorded

Known gaps:
- None recorded

Details:
- **Date window:** 2025-01-01 to 2025-04-01
- **Mode:** merged
- **Sources:** GitHub
- **Completeness:** Complete

## Appendix: All Receipts

### Big Workstream

- [PR] PR #1 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/1)
- [PR] PR #2 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/2)
- [PR] PR #3 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/3)
- [PR] PR #4 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/4)
- [PR] PR #5 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/5)
- [PR] PR #6 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/6)
- [PR] PR #7 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/7)
- [PR] PR #8 (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/8)

---

## File Artifacts

- `packet.md` (this review packet)
- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.suggested.yaml` (auto-generated workstream suggestions)
- `workstreams.yaml` (curated workstreams, created after edits)
- `bundle.manifest.json` (artifact manifest and checksums)
