apps/shiplog/tests/render_md/snapshots/render_md__snapshot__snapshot_redacted_titles.snap
---
source: apps/shiplog/tests/render_md/snapshot.rs
expression: result
---
# Summary

**Window:** 2025-Q1

**Workstreams:** 1

**Events:** 2 PRs, 0 reviews, 0 manual events

**Coverage:** Complete

**Sources:** GitHub

## Executive Summary

- **[REDACTED]** — 2 PRs, 0 reviews, 0 manual events

## Workstreams

### [REDACTED]

[REDACTED]

**Evidence anchors**

- [PR] [REDACTED] (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/10)
- [PR] [REDACTED] (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/11)

**Suggested claim prompts**

- What changed for users, operators, or maintainers?
- Which risk, delay, or repeated work did this reduce?
- Which evidence anchor best proves the change?
- What follow-up or gap should a reviewer know about?

_PRs: 2, Reviews: 0, Manual: 0_

## Receipts

### Workstream: [REDACTED]

- [PR] [REDACTED] (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/10)
- [PR] [REDACTED] (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/11)

## Coverage and Limits

Included:
- GitHub: 2 events
- Fetched events: not reported by query slices

Skipped:
- None recorded

Known gaps:
- None recorded

Details:
- **Date window:** 2025-01-01 to 2025-04-01
- **Mode:** merged
- **Sources:** GitHub
- **Completeness:** Complete

## Appendix: All Receipts

### [REDACTED]

- [PR] [REDACTED] (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/10)
- [PR] [REDACTED] (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/11)

---

## File Artifacts

- `packet.md` (this review packet)
- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.suggested.yaml` (auto-generated workstream suggestions)
- `workstreams.yaml` (curated workstreams, created after edits)
- `bundle.manifest.json` (artifact manifest and checksums)
